# goph420-w2023-lab00-stBK

./: pyproject.toml
examples/: driver.py
src/fem_1d_heat/: element.py
