[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fem_1d_heat"
version = "0.0.1"
authors = [
  { name="Mauricio de Barros", email="mauricio.debarros@ucalgary.ca" },
]
description = "Finite element analysis for 1d heat conduction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/mcdebarros/goph420-w2023-lab00-stBK"

